--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
 	<!-- Style css -->
 	<link href="~/assets/css/style.css" rel="stylesheet">
 
-
+	<!-- Syncfusion ASP.NET Core controls styles -->
+	<link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.4.48/fluent.css" />
+	<!-- Syncfusion ASP.NET Core controls scripts -->
+	<script src="https://cdn.syncfusion.com/ej2/20.4.48/dist/ej2.min.js"></script>
 	
 	<!-- Pick date -->
 	<link rel="stylesheet" href="~/assets/vendor/pickadate/themes/default.css">
@@ -45,6 +48,7 @@
 
 	<div id="main-wrapper">
 		<Partial name="_Header" />
+		
 		@RenderBody()
 
 		<Partial name="_Footer" />
@@ -109,7 +113,8 @@
 		});
 	}
 	</script>
-
+	<!-- Syncfusion ASP.NET Core Script Manager -->
+	<ejs-scripts></ejs-scripts>
 	
 </body>
 </html>
