--- a/SPMS/Views/_ViewImports.cshtml
+++ b/SPMS/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inherits SPMS.Helpers.BaseViewPage<TModel>
+@addTagHelper *, Syncfusion.EJ2
