--- a/SPMS/Areas/Staff/Views/_ViewImports.cshtml
+++ b/SPMS/Areas/Staff/Views/_ViewImports.cshtml
@@ -7,5 +7,5 @@
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
 @inherits SPMS.Helpers.BaseViewPage<TModel>
-
