--- a/SPMS/Areas/Staff/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/Details.cshtml
@@ -96,7 +96,7 @@
                                     <p class="fs-18 font-w500">
                                         @if (prjt != null)
                                         {
-                                            <button onclick="location.reload()">View</button>
+                                            <button class="btn btn-primary btn-sl-sm me-2" type="button" onclick="location.reload()">Click me if you cant see file</button>
 
                                             <div>
                                                 <ejs-pdfviewer id="pdfviewer" serviceUrl="/api/PdfViewer" isAnnotationToolbarOpen="true" enableThumbnail="false" enablePrint="false" documentPath="@ViewBag.fileName"></ejs-pdfviewer>
@@ -109,26 +109,16 @@
                                 </div>
                                 @if (prjt != null)
                                 {
-                                    <button class="msg-button" onclick="downloadDocument()" data-project-id="@prjt.ProjectId">downloadDocument</button>
                                     <div class="message1">
                                         <textarea class="form-control" id="rTextarea" rows="4" placeholder="Type comment here..."></textarea>
                                         <input type="hidden" id="status" value="Pending" />
-                                        <div class="msg-button">
-                                        </div>
+                                        <input type="hidden" id="projectId" value="@prjt.ProjectId" />
+                                    </div>
+                                    <div class="d-flex justify-content-end">
+                                        <button class="btn btn-primary btn-sl-sm me-2" type="button" onclick="downloadDocument()">Save Changes</button>
+                                        <button class="btn btn-secondary btn-sl-sm me-2" type="button" onclick="saveRemark()"><span class="me-2"><i class="fa fa-paper-plane"></i></span>Send</button>
                                     </div>
                                 }
-                                @*@using (Html.BeginForm("remark", "project", new { projectId = @prjt.ProjectId }, FormMethod.Post))
-                                {
-                                <div class="message1">
-                                <input type="hidden" value="@prjt.ProjectId" />
-                                <textarea class="form-control" id="rTextarea" asp-for="@project.Remark" name="Remark" rows="4" placeholder="Type comment here..."></textarea>
-                                <div class="msg-button">
-                                <input type="submit" name="stat" value="Approved" class="btn btn-primary" />
-                                </div>
-                                </div>
-                                }*@
-                                }
-
                             </div>
                         </div>
                     </div>
@@ -146,44 +136,4 @@
     }
 </style>
 
-<script>
-    function downloadDocument() {
-        var viewer = document.getElementById('pdfviewer').ej2_instances[0];
-        viewer.saveAsBlob().then(function (value) {
-            var data = value;
-            var reader = new FileReader();
-            reader.readAsDataURL(data);
-            reader.onload = () => {
-                var base64data = reader.result;
-                console.log(base64data);
-                viewer.load(base64data, null);
-
-                //// Prompt the user to select a file path
-                //var filePath = window.prompt("Enter the file path to save the PDF:");
-
-                //var fileName = '@ViewBag.fileName';
-
-                //// Save the PDF to the specified path with the original file name
-                //var link = document.createElement("a");
-                //link.setAttribute("href", base64data);
-                //link.setAttribute("download", fileName);
-                //link.click();
-            };
-        });
-
-        var projectId = $("button[data-project-id]").data("project-id");
-        var remark = $("#rTextarea").val(); // Get the value of the textarea
-        var status = $("#status").val(); // Get the value of the textarea
-
-        $.ajax({
-            type: "POST",
-            url: "/api/pdfviewer/",
-            data: { projectId: projectId, remark: remark, status: status }, // Pass both the ProjectId and the remark values
-            success: function (data) {
-                // ...
-                Console.log("Success");
-            }
-        });
-
-    }
-</script>
+<script src="~/assets/js/myscripts.js"></script>
