--- a/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
+	<script src="~/js\loading.js"></script>
 	 <script>
 	// Check that service workers are supported
 	if ('serviceWorker' in navigator) {
