--- a/SPMS/Areas/Graduate/Views/Project/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Index.cshtml
@@ -84,12 +84,12 @@
                                                     <td><div class="d-flex align-items-center"><i class="fa fa-circle text-warning me-1"></i>  @item.Status</div></td>
                                                 }
                                                 <td>
-                                                    <a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ProjectId">
-                                                        <i class="fa fa-eye text-info" aria-hidden="true"></i>
-                                                        View Remark
-                                                    </a> <br />
-                                                    <a href="@_file.ManipulateFile(@item.FileUrl,"Pdf")" download>
-                                                        <i class="fa fa-cloud-download text-primary me-1" aria-hidden="true"></i>
+                                                    <a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ProjectId" data-toggle="tooltip" data-placement="top" title="Click to view supervisor's comment">
+                                                        <i class="fa fa-eye text-info fa-2x" aria-hidden="true"></i>
+                                                        
+                                                    </a>&nbsp;
+                                                    <a href="@_file.ManipulateFile(@item.FileUrl,"Pdf")" download data-toggle="tooltip" data-placement="top" title="Click to download supervisor's changes">
+                                                        <i class="fa fa-cloud-download text-primary me-1 fa-2x" aria-hidden="true"></i>
                                                     </a>
 
                                                     <div class="modal fade" id="remarkModal_@item.ProjectId">
@@ -171,7 +171,7 @@
                                                             </div>
                                                         </div>
 
-                                                        <a hx-delete="/graduate/project/delete/@item.ProjectId" class="btn btn-danger shadow btn-xs sharp">
+                                                        <a hx-delete="/graduate/project/delete/@item.ProjectId" onclick="showPreloader()" class="btn btn-danger shadow btn-xs sharp">
                                                             <i class="fa fa-trash"></i>
                                                         </a>
 
@@ -243,3 +243,5 @@
 </div>
 
 <Partial name="_NoticePartial" />
+
+<script src="~/js\loading.js"></script>
