--- a/SPMS/Areas/Admin/Views/Manage/CreateStudents.cshtml
+++ b/SPMS/Areas/Admin/Views/Manage/CreateStudents.cshtml
@@ -29,7 +29,7 @@
 					<div class="form-file">
 						<input type="file" name="File" accept=".csv" class="form-file-input form-control">
 					</div>
-					<button type="submit" onclick="showPreloader()" class="btn btn-primary btn-sm">Upload</button>
+					<button type="submit" class="btn btn-primary btn-sm">Upload</button>
 				</div>
 			</div>
 		</form>
@@ -40,7 +40,7 @@
 				<div class="card">
 					<div class="card-header">
 						<h4 class="card-title">Profile Datatable</h4>
-						<a asp-action="addall" asp-route-save="save" class="btn btn-primary mb-2">Save All</a>
+						<a asp-action="addall" asp-route-save="save" onclick="showPreloader()" class="btn btn-primary mb-2">Save All</a>
 
 					</div>
 					<div class="card-body">
@@ -75,3 +75,4 @@
 		}
 	</div>
 </div>
+<script src="~/js\loading.js"></script>
