--- a/SPMS/Areas/Admin/Views/Manage/Supervisor.cshtml
+++ b/SPMS/Areas/Admin/Views/Manage/Supervisor.cshtml
@@ -55,7 +55,7 @@
 													<td>
 														<div class="d-flex">
 															<a href="#" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-pencil-alt"></i></a>
-															<a href="#" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
+															<a href="#" class="btn btn-danger shadow btn-xs sharp" onclick="showPreloader()"><i class="fa fa-trash"></i></a>
 														</div>
 													</td>
 												</tr>
@@ -117,3 +117,4 @@
 		</div>
 	</div>
 </div>
+<script src="~/js\loading.js"></script>
