--- a/SPMS/Views/Account/Login.cshtml
+++ b/SPMS/Views/Account/Login.cshtml
@@ -42,11 +42,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <button type="submit" onclick="showPreloader()" id="sign-in-button" class="btn btn-primary btn-block">Sign Me In</button>
-                                        <button class="btn btn-primary btn-block" id="button-to-show" hidden="hidden" type="button" disabled>
-                                            <span class="spinner-grow spinner-grow-sm" role="status" aria - hidden="true"> </span>
-                                            Please wait...
-                                        </button>
+                                        <button type="submit"  id="hide-button" class="btn btn-primary btn-block">Sign Me In</button>
                                     </div>
                                 </form>
                                 <div class="new-account mt-3">
@@ -61,6 +57,4 @@
         </div>
     </div>
 </div>
-
-
-<script src="~/js\loading.js"></script>
+<script src="~/js/loading.js"></script>
