--- a/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
@@ -86,7 +86,7 @@
                                     </div>
                                 </div>
                                 <div class="project-description">
-                                    <span class="fs-18 font-w500 mb-3 d-block">>@prjt.ChapterName<span style="float:right; margin-bottom:12px;"><button class="btn light btn-primary btn-sl-sm me-2" type="button" onclick="location.reload()">Click me if you cant see file</button></span></span>
+                                    <span class="fs-18 font-w500 mb-3 d-block">@prjt.ChapterName<span style="float:right; margin-bottom:12px;"><button class="btn light btn-primary btn-sl-sm me-2" type="button" onclick="location.reload()">Click me if you cant see file</button></span></span>
 
                                     @if (prjt != null)
                                     {
