--- a/SPMS/Views/Account/Login.cshtml
+++ b/SPMS/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <button type="submit"  id="hide-button" class="btn btn-primary btn-block">Sign Me In</button>
+                                        <button type="submit" class="btn btn-primary btn-block">Sign Me In</button>
                                     </div>
                                 </form>
                                 <div class="new-account mt-3">
