--- a/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
@@ -49,6 +49,8 @@
 													<input asp-for="@chap.ProjectId" name="ProjectId" value="@item.ProjectId" type="hidden" class="form-control">
 													<input asp-for="@chap.Topic" name="Topic" value="@item.Topic" type="hidden" class="form-control">
 													<input asp-for="@chap.SupervisorId" name="SupervisorId" value="@item.SupervisorId" type="hidden" class="form-control">
+													<input asp-for="@chap.ProjectStudentId" name="projectstudentid" value="@CurrentStudent.StudentId" type="hidden" class="form-control">
+
 												}
 												
 
@@ -160,6 +162,7 @@
 																		<input asp-for="@chap.Status" name="Status" value="Pending" type="hidden" class="form-control">
 																		<input asp-for="@chap.ChapterId" name="ChapterId" value="@item.ChapterId" type="hidden" class="form-control">
 																		<input asp-for="@chap.ProjectId" name="ProjectId" value="@item.ProjectId" type="hidden" class="form-control">
+																		<input asp-for="@chap.ProjectStudentId" name="projectstudentid" value="@CurrentStudent.StudentId" type="hidden" class="form-control">
 
 
 
