--- a/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
@@ -20,36 +20,39 @@
         <div class="row">
 
             <div class="col-xl-3 col-xxl-6 col-lg-6 col-sm-6">
-                <div class="widget-stat card">
-                    <div class="card-body p-4">
-                        <div class="media ai-icon">
-                            <span class="me-3 bgl-info text-info">
-                                <!-- <i class="ti-user"></i> -->
-                                <svg id="icon-customers" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text">
-                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                    <circle cx="12" cy="7" r="4"></circle>
-                                </svg>
-                            </span>
-                            <div class="media-body">
-                                <p class="mb-1">Project Proposals</p>
-                                @if (students != null)
-                                {
-                                    <h4 class="mb-0">@students.Projects.Count</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="mb-0">0</h4>
+                <a asp-controller="project" asp-action="index">
+                    <div class="widget-stat card">
+                        <div class="card-body p-4">
+                            <div class="media ai-icon">
+                                <span class="me-3 bgl-info text-info">
+                                    <!-- <i class="ti-user"></i> -->
+                                    <svg id="icon-customers" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text">
+                                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                        <circle cx="12" cy="7" r="4"></circle>
+                                    </svg>
+                                </span>
+                                <div class="media-body">
+                                    <p class="mb-1">Project Proposals</p>
+                                    @if (students != null)
+                                    {
+                                        <h4 class="mb-0">@students.Projects.Count</h4>
+                                    }
+                                    else
+                                    {
+                                        <h4 class="mb-0">0</h4>
 
-                                }
-                                @*<span class="badge badge-primary">+3.5%</span>*@
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
 
 
-           @* <div class="col-xl-3 col-xxl-6 col-lg-6 col-sm-6">
+            <div class="col-xl-3 col-xxl-6 col-lg-6 col-sm-6">
+                <a asp-controller="project" asp-action="milestone">
+
                 <div class="widget-stat card">
                     <div class="card-body p-4">
                         <div class="media ai-icon">
@@ -62,13 +65,23 @@
                             </span>
                             <div class="media-body">
                                 <p class="mb-1">Project Chapters</p>
-                                <h4 class="mb-0"></h4>
-                                <span class="badge badge-primary">+3.5%</span>
+                                @if (students != null)
+                                {
+                                    <h4 class="mb-0">@chapters.Count()</h4>
+                                }
+                                else
+                                {
+                                    <h4 class="mb-0">0</h4>
+
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>*@
+                </a>
+            </div>
+
+
         </div>
     </div>
 </div>
