--- a/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@using SPMS.Helpers;
+@using Domain.Interfaces;
+
+@inject FileHelper _file;
+
+
+@{
 	ViewData["Title"] = "Milestone";
 	var prjt = ViewData["project"] as IEnumerable<Project>;
 	var chapters = ViewData["chapters"] as IEnumerable<Chapter>;
@@ -127,7 +133,14 @@
 												<td><div class="d-flex align-items-center"><i class="fa fa-circle text-warning me-1"></i>  @item.Status</div></td>
 											}
 											<td>
-												<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ChapterId"> View Remark </a>
+												@*<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ChapterId"> View Remark </a>*@
+												<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ChapterId" class="btn light btn-info shadow btn-xs sharp me-1" data-toggle="tooltip" data-placement="top" title="Click to view supervisor's comment">
+													<i class="fa fa-eye" aria-hidden="true"></i>
+
+												</a>&nbsp;
+												<a href="@_file.ManipulateFile(@item.FileUrl,"Pdf")" download class="btn light btn-info shadow btn-xs sharp me-1" data-toggle="tooltip" data-placement="top" title="Click to download supervisor's changes">
+													<i class="fa fa-download" aria-hidden="true"></i>
+												</a>
 												<div class="modal fade" id="remarkModal_@item.ChapterId">
 													<div class="modal-dialog modal-dialog-centered" role="document">
 														<div class="modal-content">
