--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
 
     <!-- Required vendors -->
     <script src="~/assets/vendor/global/global.min.js"></script>
-    <script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
+    @*<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>*@
     <script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
     <script src="~/assets/vendor/jquery-steps/build/jquery.steps.min.js"></script>
     <script src="~/assets/vendor/select2/js/select2.full.min.js"></script>
@@ -68,7 +68,7 @@
     @*	<!-- Apex Chart -->
     <script src="~/assets/vendor/apexchart/apexchart.js"></script>*@
 
-    <script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
+    @*<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>*@
 
     <!-- Chart piety plugin files -->
     <script src="~/assets/vendor/peity/jquery.peity.min.js"></script>
