--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@*<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -16,17 +16,9 @@
 
     <!-- FAVICONS ICON -->
     <link rel="shortcut icon" type="image/png" href="~/assets/images/favico.png" />
-    <link href="~/assets/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
-    <link href="~/assets/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
 
     <!-- Style css -->
     <link href="~/assets/css/style.css" rel="stylesheet">
-
-    <!-- Syncfusion ASP.NET Core controls styles -->
-    <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.4.48/fluent.css" />
-    <!-- Syncfusion ASP.NET Core controls scripts -->
-    <script src="https://cdn.syncfusion.com/ej2/20.4.48/dist/ej2.min.js"></script>
-
 </head>
 <body>
 
@@ -46,38 +38,12 @@
 
 
 
-    <!-- Required vendors -->
-    <script src="~/assets/vendor/global/global.min.js"></script>
-    <script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
-    <script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
-
-    <!-- Apex Chart -->
-    <script src="~/assets/vendor/apexchart/apexchart.js"></script>
-
-    <script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
-
-    <!-- Chart piety plugin files -->
-    <script src="~/assets/vendor/peity/jquery.peity.min.js"></script>
-    <!-- Dashboard 1 -->
-    <script src="~/assets/js/dashboard/dashboard-1.js"></script>
-
-    <script src="~/assets/vendor/owl-carousel/owl.carousel.js"></script>
-
     <script src="~/assets/js/custom.min.js"></script>
     <script src="~/assets/js/dlabnav-init.js"></script>
     <script src="~/assets/js/demo.js"></script>
-    <script>
-        // Check that service workers are supported
-        if ('serviceWorker' in navigator) {
-            // Use the window load event to keep the page load performant
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/js/sw.js');
-            });
-        }
-    </script>
-    <!-- Syncfusion ASP.NET Core Script Manager -->
-    <ejs-scripts></ejs-scripts>
+  
     @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+*@
